examples/invalid/syntaxErr/while/whileNodone.wacc
# while missing closing done
# Output:
# #syntax error#

#Program:#

begin
  while false do
    skip
end
